...
        
        if _menuButton == nil{
            _menuButton = UIBarButtonItem(title: "", style: UIBarButtonItemStyle.Plain, target: self, action: #selector(handleMenuButton(_:)))
            
            let font = FontAwesomeHelper.fontAwesomeForSize(28)
            let attributes  = NSDictionary(object: font, forKey: NSFontAttributeName)
            _menuButton!.accessibilityIdentifier = "Menu Button"
            
            if let attributes = attributes as? [String : AnyObject]{
            
                _menuButton!.setTitleTextAttributes(attributes, forState: UIControlState.Normal)
                
            }
...
        
        if _filterButton == nil {
            _filterButton = UIBarButtonItem(title: "", style: UIBarButtonItemStyle.Plain, target: self, action: #selector(handleMenuButton(_:)))
            
            let font = FontAwesomeHelper.fontAwesomeForSize(28)
            let attributes  = NSDictionary(object: font, forKey: NSFontAttributeName)
            self.filterButton().accessibilityIdentifier = "Filter Button"
            
            if let attributes = attributes as? [String: AnyObject]{
                
                _filterButton!.setTitleTextAttributes(attributes, forState: UIControlState.Normal)
                
            }
...
