...
        button.setTitle("\u{f041}", forState: UIControlState.Normal)

        button.addTarget(self, action:#selector(accessoryTapped(_:)), forControlEvents: UIControlEvents.TouchUpInside)
        
        button.layer.cornerRadius = CGRectGetMidY(button.frame)
        
        button.accessibilityIdentifier = "Map Icon"
        
        return button

    }
    
    func updateFavoriteStatus(isFavorite:Bool){
...
