...
        
        if let data = itemData {
            setupViewWithData(data)
        }
        setupMenuNavigationForController()
        updateFavoriteButton()
        self.favoriteButton?.accessibilityIdentifier = "Favorite Button"
    }
    
    func setupViewWithData(data:CellData) {

        titleLabel.text     = data.title

...
